Afinación de Detalles 8 Marzo

--- a/theme.yaml
+++ b/theme.yaml
@@ -1,4 +1,4 @@
-name: "Capse"
+name: "Cuidadores Unidos"
 description: "Tema desarrollado para Capse basado en Octaskin de Laratify."
 author: ANGURO
 homepage: "https://www.laratify.com/"
